apps/backstage/namespace.yaml
# create namespace manifest for backstage
#
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
  annotations:
    backstage.io/kubernetes-namespace: backstage
