apps/backstage/deployment.yaml
# Create a deployment manifest to deploy backstage

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        
        - name: backstage

          image: registry.k8s.integratn.tech/backstage:v0.15
          ports:
            - containerPort: 7007
              name: http
          resources: {}
      volumes:
      # use a secret instead of a configmap
      - name: config
        configMap:
          name: app-config
