apps/backstage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-app
  namespace: backstage
  labels:
    app: backstage
spec:
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: http-backend
      port: 7007
      targetPort: http-backend
